[gd_scene load_steps=4 format=2]

[ext_resource path="res://EnemyScenes/Enemy.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.74998, 0.550003 )

[sub_resource type="Animation" id=2]
resource_name = "SDDead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12 ]
}

[node name="Enemy" type="Area2D"]
position = Vector2( 202.548, 102.598 )
collision_layer = 2
collision_mask = 31
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
